<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainMenu">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="2dp"
        android:background="@drawable/flash_tile"
        android:gravity="center"
        android:onClick="utilityMenu"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="2dp">

        <ImageView
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:src="@drawable/nades_flashbang" />

        <TextView
            style="@style/MenuText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/utility_guide" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="2dp"
        android:background="@drawable/strat_tile"
        android:gravity="center"
        android:onClick="stratMenu"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="4dp">

        <ImageView
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:src="@drawable/weapon_p90" />

        <TextView
            style="@style/MenuText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/strategies" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="4dp"
        android:background="@drawable/map_tile"
        android:gravity="center"
        android:onClick="mapOverview"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="2dp">

        <ImageView
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:src="@drawable/mission" />

        <TextView
            style="@style/MenuText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/map_overview" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="4dp"
        android:background="@drawable/gallery_tile"
        android:gravity="center"
        android:onClick="gallery"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="@+id/guideline2"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="4dp">

        <ImageView
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:src="@drawable/icon" />

        <TextView
            style="@style/MenuText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gallery" />

    </LinearLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.50121653" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />
</androidx.constraintlayout.widget.ConstraintLayout>